--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,124 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+@layer base {
+  :root {
+    /* colors */
+    --color-primary: hsl(72, 76%, 57%);
+    --color-bottom: hsl(0, 0%, 90%);
+    --color-middle: hsl(0, 0%, 95%);
+    --color-top: hsl(0, 0%, 100%);
+    --color-general: hsl(0, 0%, 0%);
+    --color-nav-bg: rgba(22, 22, 23, 0.8);
+    --color-nav-item: rgba(255, 255, 255, 0.8);
+
+    /* font colors */
+    --color-heading: hsl(0, 0%, 5%);
+    --color-text: hsl(0, 0%, 30%);
+
+    --font-sans: "Roboto", system-ui, sans-serif;
+
+    /* height of the header */
+    --header-height: 49.6px;
+  }
+
+  .dark {
+    /* colors */
+    --color-bottom: hsl(0, 0%, 0%);
+    --color-middle: hsl(0, 0%, 5%);
+    --color-top: hsl(0, 0%, 10%);
+    --color-general: hsl(0, 0%, 100%);
+    --color-nav-bg: rgba(250, 250, 252, 0.8);
+    --color-nav-item: rgba(0, 0, 0, 0.8);
+
+    /* font colors */
+    --color-heading: hsl(0, 0%, 95%);
+    --color-text: hsl(0, 0%, 70%);
+  }
+
+  html {
+    scroll-behavior: smooth;
+  }
+
+  body {
+    font-family: var(--font-sans);
+    background-color: var(--color-bottom);
+    color: var(--color-text);
+  }
+
+  img,
+  picture,
+  video,
+  canvas,
+  svg {
+    display: block;
+    user-select: none;
+  }
+
+  button {
+    display: inline-block;
+    cursor: pointer;
+  }
+}
+
+@layer components {
+  .container {
+    width: 100%;
+    margin-inline: auto;
+    padding-inline: 1.5rem;
+
+    @media (min-width: 475px) {
+      max-width: 475px;
+    }
+
+    @media (min-width: 640px) {
+      max-width: 640px;
+    }
+
+    @media (min-width: 768px) {
+      max-width: 768px;
+    }
+
+    @media (min-width: 1024px) {
+      max-width: 1024px;
+    }
+
+    @media (min-width: 1280px) {
+      max-width: 1280px;
+    }
+
+    @media (min-width: 1536px) {
+      max-width: 1536px;
+    }
+  }
+
+  .section {
+    margin-top: 5rem;
+
+    @media (min-width: 1024px) {
+      margin-top: 10rem;
+    }
+  }
+
+  .btn {
+    display: inline-block;
+    text-decoration: none;
+    background-color: var(--color-primary);
+    color: var(--color-text);
+    transition: transform 0.3s ease, filter 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .btn:hover {
+    transform: translateY(-2px);
+    filter: brightness(1.1);
+    box-shadow: 0px 2px 2px oklch(0 0 0 / 0.2), 0px 4px 4px oklch(0 0 0 / 0.1);
+    color: hsl(0, 0%, 5%);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    .btn:hover {
+      box-shadow: 0px 4px 4px oklch(0.868 0.187 121 / 0.2),
+        0px 6px 6px oklch(0.868 0.187 121 / 0.1);
+    }
+  }
+}
