--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
-@import "tailwindcss";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import "tailwindcss";
 
 @layer base {
   :root {
     /* colors */
     --color-primary: hsl(72, 76%, 57%);
+    --color-white: hsl(0, 0%, 100%);
+    --color-black: hsl(0, 0%, 0%);
+
     --color-bottom: hsl(0, 0%, 90%);
     --color-middle: hsl(0, 0%, 95%);
     --color-top: hsl(0, 0%, 100%);
@@ -16,7 +19,27 @@
     --color-heading: hsl(0, 0%, 5%);
     --color-text: hsl(0, 0%, 30%);
 
+    /* fonts */
+    --font-family-heading: "Roboto", system-ui, sans-serif;
+    --font-family-text: "Roboto", system-ui, sans-serif;
     --font-sans: "Roboto", system-ui, sans-serif;
+
+    /* sizes */
+    --size-xss: 0.5rem; /*8*/
+    --size-xs: 0.75rem; /*12*/
+    --size-sm: 0.875rem; /*14*/
+    --size-base: 1rem; /*16*/
+    --size-lg: 1.125rem; /*18*/
+    --size-xl: 1.25rem; /*20*/
+    --size-2xl: 1.5rem; /*24*/
+    --size-3xl: 1.875rem; /*30*/
+    --size-4xl: 2.25rem; /*36*/
+    --size-5xl: 3rem; /*48*/
+    --size-6xl: 3.75rem; /*60*/
+    --size-7xl: 4.5rem;
+    --size-8xl: 6rem;
+    --size-9xl: 8rem;
+    --size-10xl: 10rem;
 
     /* height of the header */
     --header-height: 49.6px;
@@ -36,14 +59,22 @@
     --color-text: hsl(0, 0%, 70%);
   }
 
+  * {
+    margin: 0;
+    line-height: calc(1em + 0.5rem);
+  }
+
   html {
     scroll-behavior: smooth;
   }
 
   body {
-    font-family: var(--font-sans);
+    font-family: var(--font-family-text);
     background-color: var(--color-bottom);
-    color: var(--color-text);
+  }
+
+  .no-scroll {
+    overflow: hidden;
   }
 
   img,
@@ -52,12 +83,17 @@
   canvas,
   svg {
     display: block;
+    max-width: 100%;
     user-select: none;
   }
 
   button {
     display: inline-block;
     cursor: pointer;
+    padding: 0;
+    border: none;
+    background: none;
+    color: inherit;
   }
 }
 
@@ -116,6 +152,20 @@
   }
 
   @media (prefers-color-scheme: dark) {
+    :root {
+      /* colors */
+      --color-bottom: hsl(0, 0%, 0%);
+      --color-middle: hsl(0, 0%, 5%);
+      --color-top: hsl(0, 0%, 10%);
+      --color-general: hsl(0, 0%, 100%);
+      --color-nav-bg: rgba(250, 250, 252, 0.8);
+      --color-nav-item: rgba(0, 0, 0, 0.8);
+
+      /* font colors */
+      --color-heading: hsl(0, 0%, 95%);
+      --color-text: hsl(0, 0%, 70%);
+    }
+
     .btn:hover {
       box-shadow: 0px 4px 4px oklch(0.868 0.187 121 / 0.2),
         0px 6px 6px oklch(0.868 0.187 121 / 0.1);
