--- a/src/sections/projects/work.css
+++ b/src/sections/projects/work.css
@@ -34,7 +34,6 @@
 
 .work__img-wrapper::after {
   content: "";
-  background-color: hsla(0, 0%, 30%, 0.4);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -42,10 +41,6 @@
   left: 0;
   z-index: 1;
   transition: background-color 0.3s;
-}
-
-.work__img-wrapper:hover::after {
-  background-color: hsla(0, 0%, 30%, 0.1);
 }
 
 .work__project:not(:last-child) {
@@ -94,7 +89,10 @@
     grid-template-columns: 1fr 1fr;
     grid-template-areas:
       "image1 content1"
-      "content2 image2";
+      "content2 image2"
+      "image3 content3"
+      "content4 image4"
+      "image5 content5";
     place-items: center; /*shorthand for justify items and align items*/
   }
 
@@ -104,11 +102,30 @@
   .work__image2 {
     grid-area: image2;
   }
+  .work__image3 {
+    grid-area: image3;
+  }
+  .work__image4 {
+    grid-area: image4;
+  }
+  .work__image5 {
+    grid-area: image5;
+  }
+
   .work__content1 {
     grid-area: content1;
   }
   .work__content2 {
     grid-area: content2;
+  }
+  .work__content3 {
+    grid-area: content3;
+  }
+  .work__content4 {
+    grid-area: content4;
+  }
+  .work__content5 {
+    grid-area: content5;
   }
 
   .work__project {
