--- a/src/index.css
+++ b/src/index.css
@@ -265,6 +265,14 @@
     color: hsl(0, 0%, 5%);
   }
 
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
   @media (prefers-color-scheme: dark) {
     .btn:hover {
       box-shadow: 0px 4px 4px oklch(0.868 0.187 121 / 0.2),
