--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -16,7 +16,7 @@
   color: var(--color-heading);
 
   /* Blur */
-  background-color: transparent;
+  /* background-color: transparent;
   backdrop-filter: blur(2px);
   position: sticky;
   display: inline-block;
@@ -24,7 +24,7 @@
   padding: 0px 6px 2px 6px;
   border: 1px solid hsla(0, 100%, 100%, 0.25);
   border-radius: 100px;
-  top: 8px;
+  top: 8px; */
 }
 
 .about__description {
@@ -51,7 +51,7 @@
   margin-bottom: 1em;
 
   /* Blur */
-  background-color: transparent;
+  /* background-color: transparent;
   backdrop-filter: blur(2px);
   position: sticky;
   display: inline-block;
@@ -59,7 +59,7 @@
   padding: 0px 6px 2px 6px;
   border: 1px solid hsla(0, 100%, 100%, 0.25);
   border-radius: 100px;
-  top: 8px;
+  top: 8px; */
 }
 
 .about__technologies-content {
