--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -13,7 +13,7 @@
   color: var(--color-heading);
 
   /* Blur */
-  background-color: transparent;
+  /* background-color: transparent;
   backdrop-filter: blur(2px);
   position: sticky;
   display: inline-block;
@@ -21,7 +21,7 @@
   padding: 0px 6px 2px 6px;
   border: 1px solid hsla(0, 100%, 100%, 0.25);
   border-radius: 100px;
-  top: 8px;
+  top: 8px; */
 }
 
 .contact__description {
