--- a/src/sections/projects/work.css
+++ b/src/sections/projects/work.css
@@ -1,23 +1,26 @@
-.work {
-  text-align: left;
-}
-
 .work__title {
   font-size: 1.75rem;
   font-family: var(--font-family-heading);
   color: var(--color-heading);
   margin-bottom: 1.5rem;
+}
 
-  /* Blur */
-  background-color: transparent;
-  backdrop-filter: blur(2px);
-  position: sticky;
-  display: inline-block;
-  width: fit-content;
-  padding: 0px 6px 2px 6px;
-  border: 1px solid hsla(0, 100%, 100%, 0.25);
-  border-radius: 100px;
-  top: 8px;
+.work__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1rem;
+  overflow-x: auto;
+  margin-inline: auto;
+}
+
+.work__project {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  min-width: 90%;
+  color: var(--color-text);
+  border: 1px solid var(--color-border);
 }
 
 .work__project-title {
@@ -29,26 +32,20 @@
 }
 
 .work__img-wrapper {
-  position: relative;
+  min-width: 50%;
 }
 
-.work__img-wrapper::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  transition: background-color 0.3s;
+.work__img {
+  object-fit: cover;
 }
 
-.work__project:not(:last-child) {
-  margin-bottom: 5rem;
+.work__project-details {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .work__project-description {
-  font-size: var(--size-base);
+  font-size: var(--size-sm);
   color: var(--color-text);
   margin: 1rem 0;
 }
@@ -63,7 +60,9 @@
 }
 
 .work__project-subtitle {
-  display: none;
+  font-size: var(--size-base);
+  font-family: var(--font-family-heading);
+  color: var(--color-heading);
 }
 
 /* xs */
@@ -80,60 +79,32 @@
 
 /* sm */
 @media (min-width: 640px) {
-  .work {
-    text-align: center;
-  }
-
   .work__container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas:
-      "image1 content1"
-      "content2 image2"
-      "image3 content3"
-      "content4 image4"
-      "image5 content5";
-    place-items: center; /*shorthand for justify items and align items*/
-  }
-
-  .work__image1 {
-    grid-area: image1;
-  }
-  .work__image2 {
-    grid-area: image2;
-  }
-  .work__image3 {
-    grid-area: image3;
-  }
-  .work__image4 {
-    grid-area: image4;
-  }
-  .work__image5 {
-    grid-area: image5;
-  }
-
-  .work__content1 {
-    grid-area: content1;
-  }
-  .work__content2 {
-    grid-area: content2;
-  }
-  .work__content3 {
-    grid-area: content3;
-  }
-  .work__content4 {
-    grid-area: content4;
-  }
-  .work__content5 {
-    grid-area: content5;
+    flex-direction: column;
   }
 
   .work__project {
-    padding: 0 1rem;
+    gap: 0;
+    min-width: 100%;
   }
 
-  .work__project-title {
-    display: none;
+  .work__project-1 {
+    flex-direction: row;
+    text-align: right;
+  }
+  .work__project-2 {
+    flex-direction: row-reverse;
+  }
+  .work__project-3 {
+    flex-direction: row;
+    text-align: right;
+  }
+  .work__project-4 {
+    flex-direction: row-reverse;
+  }
+  .work__project-5 {
+    flex-direction: row;
+    text-align: right;
   }
 
   .work__project-description {
@@ -143,17 +114,6 @@
 
   .work__project-btn {
     font-size: var(--size-xs);
-  }
-
-  .work__project:not(:last-child) {
-    margin-bottom: 0;
-  }
-
-  .work__project-subtitle {
-    display: block;
-    font-size: var(--size-base);
-    font-family: var(--font-family-heading);
-    color: var(--color-heading);
   }
 }
 
@@ -174,8 +134,13 @@
 
 /* lg */
 @media (min-width: 1024px) {
+  .work__container {
+    max-width: 80%;
+  }
+
   .work__title {
     font-size: var(--size-4xl);
+    text-align: center;
   }
 
   .work__project-subtitle {
@@ -193,6 +158,10 @@
 
 /* xl */
 @media (min-width: 1280px) {
+  .work__container {
+    max-width: 70%;
+  }
+
   .work__title {
     font-size: var(--size-5xl);
     margin: 2rem 0;
