--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -1,16 +1,18 @@
 .about {
   display: flex;
   flex-direction: column;
-  gap: 1rem 0;
+  gap: 2rem;
 }
 
 .about__content {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin: auto;
 }
 
-.about__title {
+.about__title,
+.about__technologies-title {
   font-size: 1.75rem;
   font-family: var(--font-family-heading);
   color: var(--color-heading);
@@ -40,26 +42,11 @@
 .about__technologies {
   display: flex;
   flex-direction: column;
-}
-
-.about__technologies-title {
-  font-size: var(--size-base);
-  font-weight: 500;
-  font-family: var(--font-family-heading);
-  color: var(--color-heading);
-  margin-top: 1em;
-  margin-bottom: 1em;
-
-  /* Blur */
-  /* background-color: transparent;
-  backdrop-filter: blur(2px);
-  position: sticky;
-  display: inline-block;
-  width: fit-content;
-  padding: 0px 6px 2px 6px;
-  border: 1px solid hsla(0, 100%, 100%, 0.25);
-  border-radius: 100px;
-  top: 8px; */
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+  max-width: 60ch;
+  margin: auto;
 }
 
 .about__technologies-content {
@@ -67,21 +54,32 @@
   margin: 0;
   padding: 0;
   color: var(--color-text);
-  display: flex;
-  justify-content: space-around;
+  max-width: 60ch;
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* place-items: center; */
+  justify-items: space-between;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 0.5em 1em;
+  gap: 1rem;
+}
+
+.about__technologies-content li {
+  justify-self: flex-start;
+  margin: 0;
 }
 
 .about__technologies-content img {
-  width: 6rem;
-  height: 6rem;
-  padding: 1em 1em;
+  width: 5rem;
+  height: 5rem;
+  margin: 0;
+  padding: 0 0 0.25em 0;
 }
 
 .about__technologies-content figcaption {
   text-align: center;
+  font-size: var(--size-sm);
 }
 
 /* xs */
@@ -94,21 +92,14 @@
     gap: 1.5rem;
   }
 
-  .about__title {
+  .about__title,
+  .about__technologies-title {
     font-size: var(--size-3xl);
   }
 }
 
 /* sm */
-@media (min-width: 640px) {
-  .about {
-    align-items: center;
-  }
-
-  .about__img-wrapper {
-    width: 29.819375rem;
-  }
-}
+/* @media (min-width: 640px) {} */
 
 /* md */
 /* @media (min-width: 768px) {} */
@@ -118,28 +109,32 @@
   .about {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, auto);
-    grid-template-areas:
+    /* grid-template-rows: repeat(2, auto); */
+    /* grid-template-areas:
       "content img"
-      "technologies technologies";
+      "technologies technologies"; */
+    grid-template-areas: "about technologies";
     column-gap: 3em;
   }
 
   .about__content {
-    grid-area: content;
-  }
-
-  .about__img-wrapper {
-    width: 25.95625rem;
-    grid-area: img;
-    margin: 0 auto;
+    grid-area: about;
+    margin-left: 0;
   }
 
   .about__technologies {
     grid-area: technologies;
+    align-items: flex-end;
+    margin-right: 0;
   }
 
-  .about__title {
+  .about__technologies-content li {
+    justify-self: flex-end;
+    margin: 0;
+  }
+
+  .about__title,
+  .about__technologies-title {
     font-size: var(--size-4xl);
   }
 
@@ -147,9 +142,9 @@
     font-size: var(--size-lg);
   }
 
-  .about__technologies-title {
+  /* .about__technologies-title {
     font-size: var(--size-lg);
-  }
+  } */
 }
 
 /* xl */
@@ -158,19 +153,12 @@
     gap: 2rem;
   }
 
-  .about__title {
+  .about__title,
+  .about__technologies-title {
     font-size: var(--size-5xl);
   }
 
   .about__description {
-    font-size: var(--size-xl);
-  }
-
-  .about__img-wrapper {
-    width: 30.75rem;
-  }
-
-  .about__technologies-title {
     font-size: var(--size-xl);
   }
 }
