--- a/src/index.css
+++ b/src/index.css
@@ -1,46 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tw-animate-css";
 @import "tailwindcss";
 
 @custom-variant dark (&:is(.dark *));
-
-/* @theme inline {
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --color-card: var(--card);
-  --color-card-foreground: var(--card-foreground);
-  --color-popover: var(--popover);
-  --color-popover-foreground: var(--popover-foreground);
-  --color-primary: var(--primary);
-  --color-primary-foreground: var(--primary-foreground);
-  --color-secondary: var(--secondary);
-  --color-secondary-foreground: var(--secondary-foreground);
-  --color-muted: var(--muted);
-  --color-muted-foreground: var(--muted-foreground);
-  --color-accent: var(--accent);
-  --color-accent-foreground: var(--accent-foreground);
-  --color-destructive: var(--destructive);
-  --color-border: var(--border);
-  --color-ring: var(--ring);
-  --color-input: var(--input);
-  --color-chart-1: var(--chart-1);
-  --color-chart-2: var(--chart-2);
-  --color-chart-3: var(--chart-3);
-  --color-chart-4: var(--chart-4);
-  --color-chart-5: var(--chart-5);
-  --color-sidebar: var(--sidebar);
-  --color-sidebar-foreground: var(--sidebar-foreground);
-  --color-sidebar-primary: var(--sidebar-primary);
-  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
-  --color-sidebar-accent: var(--sidebar-accent);
-  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
-  --color-sidebar-border: var(--sidebar-border);
-  --color-sidebar-ring: var(--sidebar-ring);
-} */
 
 :root {
   --radius: 0.625rem;
@@ -116,6 +78,7 @@
     /* fonts */
     --font-family-heading: "Roboto", system-ui, sans-serif;
     --font-family-text: "Roboto", system-ui, sans-serif;
+    --font-family-mono: "Roboto Mono", monospace;
     --font-sans: "Roboto", system-ui, sans-serif;
 
     /* sizes */
@@ -238,6 +201,34 @@
   }
 }
 
+@layer base {
+  html[data-theme="light"] {
+    --color-bottom: hsl(0, 0%, 90%);
+    --color-middle: hsl(0, 0%, 95%);
+    --color-top: hsl(0, 0%, 100%);
+    --color-general: hsl(0, 0%, 0%);
+    --color-nav-bg: rgba(22, 22, 23, 0.8);
+    --color-nav-item: rgba(255, 255, 255, 0.8);
+    --color-border: hsl(0, 0%, 95%);
+    --color-border-highlight: hsl(0, 0%, 100%);
+    --color-heading: hsl(0, 0%, 5%);
+    --color-text: hsl(0, 0%, 30%);
+  }
+
+  html[data-theme="dark"] {
+    --color-bottom: hsl(0, 0%, 0%);
+    --color-middle: hsl(0, 0%, 5%);
+    --color-top: hsl(0, 0%, 10%);
+    --color-general: hsl(0, 0%, 100%);
+    --color-nav-bg: rgba(250, 250, 252, 0.8);
+    --color-nav-item: rgba(0, 0, 0, 0.8);
+    --color-border: hsl(0, 0%, 30%);
+    --color-border-highlight: hsl(0, 0%, 60%);
+    --color-heading: hsl(0, 0%, 95%);
+    --color-text: hsl(0, 0%, 70%);
+  }
+}
+
 @layer components {
   .container {
     width: 100%;
@@ -306,4 +297,9 @@
         0px 6px 6px oklch(0.868 0.187 121 / 0.1);
     }
   }
+}
+
+html[data-theme="light"],
+html[data-theme="dark"] {
+  color-scheme: initial !important;
 }
