--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -1,140 +1,109 @@
-.about {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
-.about__content {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin: auto;
-}
-
-.about__title,
-.about__technologies-title {
+.about__title {
   font-size: 1.75rem;
   font-family: var(--font-family-heading);
   color: var(--color-heading);
-
-  /* Blur */
-  /* background-color: transparent;
-  backdrop-filter: blur(2px);
-  position: sticky;
-  display: inline-block;
-  width: fit-content;
-  padding: 0px 6px 2px 6px;
-  border: 1px solid hsla(0, 100%, 100%, 0.25);
-  border-radius: 100px;
-  top: 8px; */
 }
 
 .about__description {
-  max-width: 60ch;
   font-size: var(--size-base);
   color: var(--color-text);
 }
 
-.about__img {
-  width: 100%;
-}
-
-.about__technologies {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 100%;
-  height: 100%;
-  max-width: 60ch;
-  margin: auto;
-}
-
 .about__technologies-content {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  color: var(--color-text);
-  max-width: 60ch;
-  height: 100%;
-  width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  /* place-items: center; */
-  justify-items: space-between;
+  grid-template-columns: repeat(2, 1fr);
+  place-items: center;
+  list-style: none;
+  color: var(--color-text);
+  border-radius: 8px;
+}
+
+.about__technologies-title {
+  grid-column: span 2 / span 2;
+  width: 100%;
+  height: 100%;
+  padding: 28px;
+  font-size: var(--size-base);
+  font-weight: 700;
+  font-family: var(--font-family-mono);
+  color: var(--color-nav-item);
+  background-color: var(--color-nav-bg);
+  display: flex;
+  justify-content: center;
   align-items: center;
-  gap: 1rem;
+  border: 1px solid var(--color-border);
+  border-bottom: none;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 .about__technologies-content li {
-  justify-self: flex-start;
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--color-border);
+}
+.about__technologies-content li:hover {
+  background-color: var(--color-bottom);
+}
+.about__technologies-content li:nth-last-child(2) {
+  border-bottom-left-radius: 8px;
+}
+.about__technologies-content li:last-child {
+  border-bottom-right-radius: 8px;
 }
 
-.about__technologies-content img {
-  width: 5rem;
-  height: 5rem;
-  margin: 0;
-  padding: 0 0 0.25em 0;
+.about__technologies-content figure {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 28px;
+  transition: color ease 0.3s;
+}
+
+.about__technologies-content figure:hover {
+  color: var(--color-primary);
 }
 
 .about__technologies-content figcaption {
-  text-align: center;
   font-size: var(--size-sm);
+  color: var(--color-heading);
 }
 
 /* xs */
 @media (min-width: 475px) {
-  .about {
-    gap: 1.5rem;
-  }
-
-  .about__content {
-    gap: 1.5rem;
-  }
-
-  .about__title,
-  .about__technologies-title {
+  .about__title {
     font-size: var(--size-3xl);
   }
 }
 
 /* sm */
-/* @media (min-width: 640px) {} */
+@media (min-width: 640px) {
+  .about__technologies-content {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .about__technologies-title {
+    border-top-right-radius: 0px;
+  }
+
+  .about__technologies-content li:nth-child(3) {
+    border-top-right-radius: 8px;
+  }
+  .about__technologies-content li:nth-child(4) {
+    border-bottom-left-radius: 8px;
+  }
+  .about__technologies-content li:nth-child(6) {
+    border-bottom-left-radius: 0px;
+  }
+}
 
 /* md */
 /* @media (min-width: 768px) {} */
 
 /* lg */
 @media (min-width: 1024px) {
-  .about {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    /* grid-template-rows: repeat(2, auto); */
-    /* grid-template-areas:
-      "content img"
-      "technologies technologies"; */
-    grid-template-areas: "about technologies";
-    column-gap: 3em;
-  }
-
-  .about__content {
-    grid-area: about;
-    margin-left: 0;
-  }
-
-  .about__technologies {
-    grid-area: technologies;
-    align-items: flex-end;
-    margin-right: 0;
-  }
-
-  .about__technologies-content li {
-    justify-self: flex-end;
-    margin: 0;
-  }
-
-  .about__title,
-  .about__technologies-title {
+  .about__title {
     font-size: var(--size-4xl);
   }
 
@@ -142,24 +111,41 @@
     font-size: var(--size-lg);
   }
 
-  /* .about__technologies-title {
+  .about__technologies-title {
     font-size: var(--size-lg);
-  } */
+  }
 }
 
 /* xl */
 @media (min-width: 1280px) {
-  .about__content {
-    gap: 2rem;
-  }
-
-  .about__title,
-  .about__technologies-title {
+  .about__title {
     font-size: var(--size-5xl);
   }
 
   .about__description {
     font-size: var(--size-xl);
+  }
+
+  .about__technologies-title {
+    grid-column: span 1 / span 1;
+    border: 1px solid var(--color-border);
+    border-right: none;
+    border-bottom-left-radius: 8px;
+  }
+
+  .about__technologies-content {
+    grid-template-columns: repeat(7, 1fr);
+    width: 100%;
+  }
+
+  .about__technologies-content li:nth-child(3) {
+    border-top-right-radius: 0px;
+  }
+  .about__technologies-content li:nth-child(4) {
+    border-bottom-left-radius: 0px;
+  }
+  .about__technologies-content li:last-child {
+    border-top-right-radius: 8px;
   }
 }
 
