--- a/src/sections/projects/work.css
+++ b/src/sections/projects/work.css
@@ -12,56 +12,77 @@
   gap: 1rem;
   overflow-x: auto;
   margin-inline: auto;
+  cursor: pointer;
+  user-select: none;
 }
 
 .work__project {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  min-width: 90%;
+  height: 590px;
+  min-width: 35ch;
   color: var(--color-text);
+  background-color: var(--color-bottom);
   border: 1px solid var(--color-border);
-}
-
-.work__project-title {
-  font-size: var(--size-lg);
-  font-weight: 500;
-  margin-bottom: 1.5rem;
-  font-family: var(--font-family-heading);
-  color: var(--color-heading);
+  border-radius: 8px;
 }
 
 .work__img-wrapper {
+  position: relative;
   min-width: 50%;
 }
-
+.work__img-wrapper::after {
+  content: "";
+  background-image: linear-gradient(
+    to bottom,
+    transparent 60%,
+    var(--color-bottom)
+  );
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
 .work__img {
   object-fit: cover;
+  height: 100%;
+  border-bottom: 0.25px solid var(--color-bottom);
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 .work__project-details {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.work__project-description {
-  font-size: var(--size-sm);
-  color: var(--color-text);
-  margin: 1rem 0;
-}
-
-.work__project-btn {
-  font-size: var(--size-base);
-  text-transform: uppercase;
-}
-
-.work__project-btn:hover {
-  color: var(--color-heading);
+  height: 100%;
+  padding: 0 1em 1em 1em;
+  display: grid;
+  grid-template-rows: auto auto 1fr;
 }
 
 .work__project-subtitle {
   font-size: var(--size-base);
   font-family: var(--font-family-heading);
+  color: var(--color-heading);
+}
+
+.work__project-description {
+  padding-top: 1em;
+  font-size: var(--size-sm);
+  color: var(--color-text);
+}
+
+.work__project-dialog {
+  align-self: flex-end;
+}
+
+.work__project-btn {
+  width: 100%;
+  font-size: var(--size-base);
+  text-transform: uppercase;
+}
+
+.work__project-btn:hover {
   color: var(--color-heading);
 }
 
@@ -72,6 +93,10 @@
     margin: 1.5rem 0;
   }
 
+  .work__project {
+    height: 620px;
+  }
+
   .work__project-description {
     margin: 1.5rem 0;
   }
@@ -80,12 +105,34 @@
 /* sm */
 @media (min-width: 640px) {
   .work__container {
+    gap: 1.5rem;
+  }
+
+  .work__project {
+    height: 590px;
+  }
+
+  .work__project-description {
+    font-size: var(--size-xs);
+    margin: 1em 0;
+  }
+
+  .work__project-btn {
+    font-size: var(--size-xs);
+  }
+}
+
+/* md */
+@media (min-width: 768px) {
+  .work__container {
     flex-direction: column;
+    cursor: default;
   }
 
   .work__project {
     gap: 0;
     min-width: 100%;
+    height: auto;
   }
 
   .work__project-1 {
@@ -107,18 +154,35 @@
     text-align: right;
   }
 
-  .work__project-description {
-    font-size: var(--size-xs);
-    margin: 1em 0;
+  .work__img-1 {
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 8px;
+  }
+  .work__img-2 {
+    border-top-left-radius: 0px;
+    border-bottom-right-radius: 8px;
+  }
+  .work__img-3 {
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 8px;
+  }
+  .work__img-4 {
+    border-top-left-radius: 0px;
+    border-bottom-right-radius: 8px;
+  }
+  .work__img-5 {
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 8px;
   }
 
-  .work__project-btn {
-    font-size: var(--size-xs);
+  .work__img-wrapper::after {
+    background-image: none;
   }
-}
 
-/* md */
-@media (min-width: 768px) {
+  .work__project-details {
+    padding: 1em;
+  }
+
   .work__project-subtitle {
     font-size: var(--size-lg);
   }
@@ -129,6 +193,7 @@
 
   .work__project-btn {
     font-size: var(--size-sm);
+    width: auto;
   }
 }
 
@@ -159,7 +224,7 @@
 /* xl */
 @media (min-width: 1280px) {
   .work__container {
-    max-width: 70%;
+    max-width: 68%;
   }
 
   .work__title {
@@ -178,16 +243,11 @@
   .work__project-btn {
     font-size: var(--size-lg);
   }
-
-  .work__container {
-    width: 80%;
-    margin: 0 auto;
-  }
 }
 
 /* 2xl */
 @media (min-width: 1536px) {
   .work__container {
-    width: 68%;
+    width: 65%;
   }
 }
