--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 @import "tw-animate-css";
 @import "tailwindcss";
 
@@ -37,6 +37,58 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+
+  /* Custom styles */
+  /* fonts */
+  --font-family-heading: "Roboto", system-ui, sans-serif;
+  --font-family-text: "Roboto", system-ui, sans-serif;
+  --font-family-mono: "Roboto Mono", monospace;
+  --font-sans: "Roboto", system-ui, sans-serif;
+
+  /* sizes */
+  --size-xss: 0.5rem; /*8*/
+  --size-xs: 0.75rem; /*12*/
+  --size-sm: 0.875rem; /*14*/
+  --size-base: 1rem; /*16*/
+  --size-lg: 1.125rem; /*18*/
+  --size-xl: 1.25rem; /*20*/
+  --size-2xl: 1.5rem; /*24*/
+  --size-3xl: 1.875rem; /*30*/
+  --size-4xl: 2.25rem; /*36*/
+  --size-5xl: 3rem; /*48*/
+  --size-6xl: 3.75rem; /*60*/
+  --size-7xl: 4.5rem;
+  --size-8xl: 6rem;
+  --size-9xl: 8rem;
+  --size-10xl: 10rem;
+
+  /* height of the header */
+  --header-height: 49.6px;
+
+  /* font colors */
+  --color-heading: hsl(0, 0%, 5%);
+  --color-text: hsl(0, 0%, 30%);
+
+  /* colors */
+  --color-primary: hsl(72, 76%, 57%);
+  --color-white: hsl(0, 0%, 100%);
+  --color-black: hsl(0, 0%, 0%);
+
+  --color-bottom: hsl(0, 0%, 90%);
+  --color-middle: hsl(0, 0%, 95%);
+  --color-top: hsl(0, 0%, 100%);
+  --color-general: hsl(0, 0%, 0%);
+  --color-nav-bg: rgba(22, 22, 23, 0.8);
+  --color-nav-item: rgba(255, 255, 255, 0.8);
+  --color-border: hsl(0, 0%, 70%);
+  --color-border-highlight: hsl(0, 0%, 40%);
+  --gradient: linear-gradient(0deg, var(--color-middle) 95%, var(--color-top));
+  --gradient-hover: linear-gradient(
+    0deg,
+    var(--color-middle),
+    var(--color-top)
+  );
+  --shadow: 0px 2px 2px hsla(0, 0%, 0%, 0.07), 0px 4px 4px hsla(0, 0%, 0%, 0.15);
 }
 
 .dark {
@@ -71,67 +123,30 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+
+  /* Custom styles */
+  /* colors */
+  --color-bottom: hsl(0, 0%, 0%);
+  --color-middle: hsl(0, 0%, 5%);
+  --color-top: hsl(0, 0%, 10%);
+  --color-general: hsl(0, 0%, 100%);
+  --color-nav-bg: rgba(250, 250, 252, 0.8);
+  --color-nav-item: rgba(0, 0, 0, 0.8);
+  --color-border: hsl(0, 0%, 30%);
+  --color-border-highlight: hsl(0, 0%, 60%);
+  --gradient: linear-gradient(0deg, var(--color-middle) 95%, var(--color-top));
+  --gradient-hover: linear-gradient(
+    0deg,
+    var(--color-middle),
+    var(--color-top)
+  );
+
+  /* font colors */
+  --color-heading: hsl(0, 0%, 95%);
+  --color-text: hsl(0, 0%, 70%);
 }
 
 @layer base {
-  :root {
-    /* fonts */
-    --font-family-heading: "Roboto", system-ui, sans-serif;
-    --font-family-text: "Roboto", system-ui, sans-serif;
-    --font-family-mono: "Roboto Mono", monospace;
-    --font-sans: "Roboto", system-ui, sans-serif;
-
-    /* sizes */
-    --size-xss: 0.5rem; /*8*/
-    --size-xs: 0.75rem; /*12*/
-    --size-sm: 0.875rem; /*14*/
-    --size-base: 1rem; /*16*/
-    --size-lg: 1.125rem; /*18*/
-    --size-xl: 1.25rem; /*20*/
-    --size-2xl: 1.5rem; /*24*/
-    --size-3xl: 1.875rem; /*30*/
-    --size-4xl: 2.25rem; /*36*/
-    --size-5xl: 3rem; /*48*/
-    --size-6xl: 3.75rem; /*60*/
-    --size-7xl: 4.5rem;
-    --size-8xl: 6rem;
-    --size-9xl: 8rem;
-    --size-10xl: 10rem;
-
-    /* height of the header */
-    --header-height: 49.6px;
-
-    /* font colors */
-    --color-heading: hsl(0, 0%, 5%);
-    --color-text: hsl(0, 0%, 30%);
-
-    /* colors */
-    --color-primary: hsl(72, 76%, 57%);
-    --color-white: hsl(0, 0%, 100%);
-    --color-black: hsl(0, 0%, 0%);
-
-    --color-bottom: hsl(0, 0%, 90%);
-    --color-middle: hsl(0, 0%, 95%);
-    --color-top: hsl(0, 0%, 100%);
-    --color-general: hsl(0, 0%, 0%);
-    --color-nav-bg: rgba(22, 22, 23, 0.8);
-    --color-nav-item: rgba(255, 255, 255, 0.8);
-    --color-border: hsl(0, 0%, 95%);
-    --color-border-highlight: hsl(0, 0%, 100%);
-    --gradient: linear-gradient(
-      0deg,
-      var(--color-middle) 95%,
-      var(--color-top)
-    );
-    --gradient-hover: linear-gradient(
-      0deg,
-      var(--color-middle),
-      var(--color-top)
-    );
-    --shadow: 0px 2px 2px hsla(0, 0%, 0%, 0.07),
-      0px 4px 4px hsla(0, 0%, 0%, 0.15);
-  }
-
   * {
     margin: 0;
     line-height: calc(1em + 0.5rem);
@@ -168,64 +183,6 @@
     outline: none;
     background: none;
     color: inherit;
-  }
-}
-
-@layer base {
-  @media (prefers-color-scheme: dark) {
-    :root {
-      /* colors */
-      --color-bottom: hsl(0, 0%, 0%);
-      --color-middle: hsl(0, 0%, 5%);
-      --color-top: hsl(0, 0%, 10%);
-      --color-general: hsl(0, 0%, 100%);
-      --color-nav-bg: rgba(250, 250, 252, 0.8);
-      --color-nav-item: rgba(0, 0, 0, 0.8);
-      --color-border: hsl(0, 0%, 30%);
-      --color-border-highlight: hsl(0, 0%, 60%);
-      --gradient: linear-gradient(
-        0deg,
-        var(--color-middle) 95%,
-        var(--color-top)
-      );
-      --gradient-hover: linear-gradient(
-        0deg,
-        var(--color-middle),
-        var(--color-top)
-      );
-
-      /* font colors */
-      --color-heading: hsl(0, 0%, 95%);
-      --color-text: hsl(0, 0%, 70%);
-    }
-  }
-}
-
-@layer base {
-  html[data-theme="light"] {
-    --color-bottom: hsl(0, 0%, 90%);
-    --color-middle: hsl(0, 0%, 95%);
-    --color-top: hsl(0, 0%, 100%);
-    --color-general: hsl(0, 0%, 0%);
-    --color-nav-bg: rgba(22, 22, 23, 0.8);
-    --color-nav-item: rgba(255, 255, 255, 0.8);
-    --color-border: hsl(0, 0%, 95%);
-    --color-border-highlight: hsl(0, 0%, 100%);
-    --color-heading: hsl(0, 0%, 5%);
-    --color-text: hsl(0, 0%, 30%);
-  }
-
-  html[data-theme="dark"] {
-    --color-bottom: hsl(0, 0%, 0%);
-    --color-middle: hsl(0, 0%, 5%);
-    --color-top: hsl(0, 0%, 10%);
-    --color-general: hsl(0, 0%, 100%);
-    --color-nav-bg: rgba(250, 250, 252, 0.8);
-    --color-nav-item: rgba(0, 0, 0, 0.8);
-    --color-border: hsl(0, 0%, 30%);
-    --color-border-highlight: hsl(0, 0%, 60%);
-    --color-heading: hsl(0, 0%, 95%);
-    --color-text: hsl(0, 0%, 70%);
   }
 }
 
@@ -297,9 +254,4 @@
         0px 6px 6px oklch(0.868 0.187 121 / 0.1);
     }
   }
-}
-
-html[data-theme="light"],
-html[data-theme="dark"] {
-  color-scheme: initial !important;
 }
