--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -41,9 +41,7 @@
   width: 100%;
   height: 100%;
   border: 1px solid var(--color-border);
-}
-.about__technologies-content li:hover {
-  background-color: var(--color-bottom);
+  transition: background-color ease 0.2s;
 }
 .about__technologies-content li:nth-last-child(2) {
   border-bottom-left-radius: 8px;
@@ -58,11 +56,7 @@
   align-items: center;
   gap: 0.5rem;
   padding: 28px;
-  transition: color ease 0.3s;
-}
-
-.about__technologies-content figure:hover {
-  color: var(--color-primary);
+  transition: color ease 0.4s;
 }
 
 .about__technologies-content figcaption {
