--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -3,7 +3,6 @@ footer {
 }
 
 .footer__content {
-  border-radius: 10px 10px 0 0;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(3, auto);
@@ -12,6 +11,7 @@ footer {
     "connect"
     "footer";
   gap: 1em;
+  padding-top: 1.5rem;
 }
 
 .footer__nav {
@@ -20,14 +20,17 @@ footer {
   justify-content: center;
   column-gap: 1em;
   list-style: none;
-  margin: 1rem 0 0 0;
+  /* margin: 1rem 0 0 0; */
   padding: 0;
   grid-area: nav;
 }
 
 .footer__nav-link {
   text-decoration: none;
+  text-transform: uppercase;
   font-size: var(--size-base);
+  font-family: var(--font-family-mono);
+  font-weight: 400;
   color: var(--color-text);
   letter-spacing: 0.0625em;
   transition: color 0.3s;
@@ -59,6 +62,7 @@ footer {
   grid-area: footer;
   text-align: center;
   font-size: var(--size-xs);
+  font-family: var(--font-family-mono);
   color: var(--color-text);
   margin-bottom: 0.5em;
 }
