--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&PT+Sans+Narrow:wght@400;700&display=swap");
 @import "tw-animate-css";
 @import "tailwindcss";
 
@@ -43,6 +43,7 @@
   --font-family-heading: "Roboto", system-ui, sans-serif;
   --font-family-text: "Roboto", system-ui, sans-serif;
   --font-family-mono: "Roboto Mono", monospace;
+  --font-family-long: "PT Sans Narrow", sans-serif;
   --font-sans: "Roboto", system-ui, sans-serif;
 
   /* sizes */
@@ -70,6 +71,7 @@
   --color-text: hsl(0, 0%, 30%);
 
   /* colors */
+  /* --color-primary: hsl(140, 70%, 40%); */
   --color-primary: hsl(72, 76%, 57%);
   --color-white: hsl(0, 0%, 100%);
   --color-black: hsl(0, 0%, 0%);
@@ -184,12 +186,17 @@
     background: none;
     color: inherit;
   }
+
+  a {
+    text-decoration: underline;
+  }
 }
 
 @layer components {
   .container {
     width: 100%;
-    margin-inline: auto;
+    margin-left: auto;
+    margin-right: auto;
     padding-inline: 1.5rem;
 
     @media (min-width: 475px) {
@@ -228,8 +235,12 @@
   .btn {
     display: inline-block;
     text-decoration: none;
+    font-family: var(--font-family-mono);
+    padding: 0.25em 0.5em;
+    border: 2px solid hsl(72, 65%, 75%);
+    border-radius: 50px;
     background-color: var(--color-primary);
-    color: var(--color-text);
+    color: var(--color-black);
     transition: transform 0.3s ease, filter 0.3s ease, box-shadow 0.3s ease;
   }
 
@@ -253,5 +264,18 @@
       box-shadow: 0px 4px 4px oklch(0.868 0.187 121 / 0.2),
         0px 6px 6px oklch(0.868 0.187 121 / 0.1);
     }
+  }
+
+  @keyframes ripple {
+    0%,
+    100% {
+      transform: translate(-50%, -50%) scale(1);
+    }
+    50% {
+      transform: translate(-50%, -50%) scale(0.9);
+    }
+  }
+  .animate-ripple {
+    animation: ripple var(--duration, 2s) ease calc(var(--i, 0) * 0.2s) infinite;
   }
 }
