--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -1,12 +1,15 @@
 .about__title {
   font-size: 1.75rem;
   font-family: var(--font-family-heading);
+  font-weight: 500;
   color: var(--color-heading);
+  margin-bottom: 0.75em;
 }
 
 .about__description {
   font-size: var(--size-base);
   color: var(--color-text);
+  margin-bottom: 1em;
 }
 
 .about__technologies-content {
@@ -15,7 +18,9 @@
   place-items: center;
   list-style: none;
   color: var(--color-text);
-  border-radius: 8px;
+  border-radius: 1.5rem;
+  border: 1px solid var(--color-border);
+  overflow: hidden;
 }
 
 .about__technologies-title {
@@ -24,30 +29,21 @@
   height: 100%;
   padding: 28px;
   font-size: var(--size-base);
-  font-weight: 700;
+  font-weight: 400;
   font-family: var(--font-family-mono);
   color: var(--color-nav-item);
   background-color: var(--color-nav-bg);
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid var(--color-border);
-  border-bottom: none;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
+  outline: 1px solid var(--color-border);
 }
 
 .about__technologies-content li {
   width: 100%;
   height: 100%;
-  border: 1px solid var(--color-border);
+  outline: 1px solid var(--color-border);
   transition: background-color ease 0.2s;
-}
-.about__technologies-content li:nth-last-child(2) {
-  border-bottom-left-radius: 8px;
-}
-.about__technologies-content li:last-child {
-  border-bottom-right-radius: 8px;
 }
 
 .about__technologies-content figure {
@@ -75,20 +71,6 @@
 @media (min-width: 640px) {
   .about__technologies-content {
     grid-template-columns: repeat(4, 1fr);
-  }
-
-  .about__technologies-title {
-    border-top-right-radius: 0px;
-  }
-
-  .about__technologies-content li:nth-child(3) {
-    border-top-right-radius: 8px;
-  }
-  .about__technologies-content li:nth-child(4) {
-    border-bottom-left-radius: 8px;
-  }
-  .about__technologies-content li:nth-child(6) {
-    border-bottom-left-radius: 0px;
   }
 }
 
@@ -122,24 +104,11 @@
 
   .about__technologies-title {
     grid-column: span 1 / span 1;
-    border: 1px solid var(--color-border);
-    border-right: none;
-    border-bottom-left-radius: 8px;
   }
 
   .about__technologies-content {
     grid-template-columns: repeat(7, 1fr);
     width: 100%;
-  }
-
-  .about__technologies-content li:nth-child(3) {
-    border-top-right-radius: 0px;
-  }
-  .about__technologies-content li:nth-child(4) {
-    border-bottom-left-radius: 0px;
-  }
-  .about__technologies-content li:last-child {
-    border-top-right-radius: 8px;
   }
 }
 
