--- a/src/sections/hero/hero.css
+++ b/src/sections/hero/hero.css
@@ -3,23 +3,29 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   gap: 1rem;
-  height: calc(100vh - (2 * var(--header-height) - 0.5rem));
+  height: calc(100vh - var(--header-height));
   min-height: min-content;
 }
 
-.hero__img {
-  border-radius: 50%;
-  width: 6rem;
-  height: 6rem;
+.hero__intro {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.hero__subtitle {
+.hero__intro-img {
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+}
+
+.hero__intro-subtitle {
   color: var(--color-heading);
   font-family: var(--font-family-heading);
   font-size: var(--size-base);
-  font-weight: 500;
+  font-weight: 400;
   line-height: 0.9;
 }
 
@@ -27,29 +33,31 @@
   color: var(--color-heading);
   text-transform: uppercase;
   font-family: var(--font-family-heading);
-  font-size: var(--size-5xl);
+  font-size: 4rem;
+  line-height: 1;
   font-weight: 600;
-  letter-spacing: -0.05em;
-  line-height: 0.9;
+  text-align: left;
 }
 
 .hero__description {
   max-width: 60ch;
   font-size: var(--size-base);
-  color: var(--color-text);
+  font-weight: 300;
+  color: var(--color-heading);
+  text-align: left;
 }
 
-.hero__btn {
+.hero__btns {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 1rem;
   width: 100%;
   text-transform: uppercase;
   font-size: var(--size-base);
 }
 
-.hero__btn a {
+.hero__btns a {
   flex: 1;
   max-width: 110.83px;
   text-align: center;
@@ -59,16 +67,34 @@
 /* xs */
 @media (min-width: 475px) {
   .hero {
+    align-items: center;
     gap: 1.5rem;
   }
 
-  .hero__img {
-    width: 6.5rem;
-    height: 6.5rem;
+  .hero__intro {
+    align-items: center;
   }
 
-  .hero__subtitle {
+  .hero__intro-img {
+    width: 6rem;
+    height: 6rem;
+  }
+
+  .hero__intro-subtitle {
     font-size: var(--size-lg);
+  }
+
+  .hero__title {
+    text-align: center;
+    font-size: var(--size-7xl);
+  }
+
+  .hero__description {
+    text-align: center;
+  }
+
+  .hero__btns {
+    justify-content: center;
   }
 }
 
@@ -78,38 +104,30 @@
 /* md */
 @media (min-width: 768px) {
   .hero {
-    margin-top: calc(var(--header-height) + 2rem);
+    margin-top: var(--header-height);
   }
 
   .hero__title {
     font-weight: 700;
+    font-size: var(--size-8xl);
   }
 }
 
 /* lg */
 @media (min-width: 1024px) {
-  .hero__img {
-    width: 8rem;
-    height: 8rem;
-  }
-
-  .hero__subtitle {
+  .hero__intro-subtitle {
     font-size: var(--size-2xl);
-  }
-
-  .hero__title {
-    font-size: var(--size-7xl);
   }
 
   .hero__description {
     font-size: var(--size-lg);
   }
 
-  .hero__btn {
+  .hero__btns {
     font-size: var(--size-lg);
   }
 
-  .hero__btn a {
+  .hero__btns a {
     max-width: 124.67px;
   }
 }
@@ -120,16 +138,17 @@
     gap: 2rem;
   }
 
-  .hero__img {
-    width: 10rem;
-    height: 10rem;
+  .hero__intro-img {
+    width: 8rem;
+    height: 8rem;
   }
 
-  .hero__subtitle {
+  .hero__intro-subtitle {
     font-size: var(--size-4xl);
   }
 
   .hero__title {
+    font-weight: 700;
     font-size: var(--size-9xl);
   }
 
@@ -137,11 +156,11 @@
     font-size: var(--size-xl);
   }
 
-  .hero__btn {
+  .hero__btns {
     font-size: var(--size-xl);
   }
 
-  .hero__btn a {
+  .hero__btns a {
     max-width: 138.53px;
   }
 }
