--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -32,7 +32,7 @@
   font-weight: 400;
   font-family: var(--font-family-mono);
   color: var(--color-nav-item);
-  background-color: var(--color-nav-bg);
+  background-color: var(--color-general);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,7 +43,6 @@
   width: 100%;
   height: 100%;
   outline: 1px solid var(--color-border);
-  transition: background-color ease 0.2s;
 }
 
 .about__technologies-content figure {
@@ -52,7 +51,6 @@
   align-items: center;
   gap: 0.5rem;
   padding: 28px;
-  transition: color ease 0.4s;
 }
 
 .about__technologies-content figcaption {
