--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -5,39 +5,46 @@
   align-items: center;
   text-align: center;
   /* padding-bottom: 4.5rem; */
+
+  background-color: var(--color-primary);
+  filter: brightness(0.9);
+  background-image:
+    radial-gradient(var(--color-black) 0.25px, transparent 1px),
+    radial-gradient(var(--color-black) 0.25px, transparent 1px);
+  background-size: 6px 6px;
+  background-position:
+    0 0,
+    3px 3px;
+  background-repeat: repeat;
 }
 
 .contact__title {
   font-size: 1.75rem;
   font-family: var(--font-family-heading);
   font-weight: 500;
-  color: var(--color-heading);
+  color: var(--color-black);
   margin-bottom: 0.75em;
-
-  /* Blur */
-  /* background-color: transparent;
-  backdrop-filter: blur(2px);
-  position: sticky;
-  display: inline-block;
-  width: fit-content;
-  padding: 0px 6px 2px 6px;
-  border: 1px solid hsla(0, 100%, 100%, 0.25);
-  border-radius: 100px;
-  top: 8px; */
+  z-index: 10;
 }
 
 .contact__description {
   text-align: center;
   text-justify: inter-word;
   font-size: var(--size-base);
-  color: var(--color-text);
+  color: var(--color-black);
   max-width: 60ch;
   margin-bottom: 1em;
+  z-index: 10;
+  background-color: var(--color-primary);
+  border-radius: 0.5rem;
 }
 
 .contact__btn {
   font-size: var(--size-base);
   text-transform: uppercase;
+  border: 2px solid hsl(60, 1%, 18%);
+  background-color: var(--color-black);
+  color: var(--color-primary);
 }
 
 /* xs */
