--- a/src/sections/hero/hero.css
+++ b/src/sections/hero/hero.css
@@ -7,6 +7,7 @@
   gap: 1rem;
   height: calc(100vh - var(--header-height));
   min-height: min-content;
+  min-width: 100vw;
 }
 
 .hero__intro {
@@ -62,6 +63,21 @@
   max-width: 110.83px;
   text-align: center;
   white-space: nowrap;
+}
+
+.resume-btn {
+  transition:
+    transform 0.3s ease,
+    filter 0.3s ease,
+    box-shadow 0.3s ease;
+}
+
+.resume-btn:hover {
+  transform: translateY(-2px);
+  filter: brightness(1.1);
+  box-shadow:
+    0px 4px 4px oklch(100% 0.00011 271.152 / 0.2),
+    0px 6px 6px oklch(100% 0.00011 271.152 / 0.1);
 }
 
 /* xs */
