--- a/src/sections/projects/work.css
+++ b/src/sections/projects/work.css
@@ -23,9 +23,7 @@
   margin-inline: auto;
   cursor: pointer;
   user-select: none;
-
-  padding-left: 24px;
-  padding-right: 24px;
+  padding: 12px 24px;
 }
 
 .work__project {
@@ -34,11 +32,12 @@
   height: 590px;
   min-width: 35ch;
   color: var(--color-text);
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to bottom,
     var(--color-top),
     var(--color-middle)
-  );
+  ); */
+  background-color: var(--color-bottom);
   border: 1px solid var(--color-border);
   border-radius: 1.5rem;
   transition: background-color ease 0.3s;
@@ -54,7 +53,7 @@
   background-image: linear-gradient(
     to bottom,
     transparent 65%,
-    var(--color-top)
+    var(--color-bottom)
   );
   width: 100%;
   height: 100%;
@@ -66,7 +65,7 @@
 .work__img {
   object-fit: cover;
   height: 100%;
-  border-bottom: 0.25px solid var(--color-top);
+  border-bottom: 0.25px solid var(--color-bottom);
 }
 
 .work__project-details {
@@ -96,14 +95,8 @@
 .work__project-btn {
   display: inline-block;
   text-transform: uppercase;
-  font-size: var(--size-base);
-  font-family: var(--font-family-mono);
-  font-weight: 600;
-  padding: 0.25em 0.5em;
-  border-radius: 50px;
-  background-color: var(--color-general);
-  color: var(--color-nav-item);
-  filter: brightness(1.1);
+  font-size: var(--size-sm);
+  background-color: var(--color-top);
 }
 
 /* xs */
@@ -172,8 +165,8 @@
     flex-direction: column;
     cursor: default;
 
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 12px;
+    padding-right: 12px;
   }
 
   .work__project {
@@ -185,50 +178,50 @@
   .work__project-1 {
     flex-direction: row;
     text-align: right;
-    background-image: linear-gradient(
+    /* background-image: linear-gradient(
       to right,
       var(--color-top) 50%,
       var(--color-middle),
       var(--color-bottom)
-    );
+    ); */
   }
   .work__project-2 {
     flex-direction: row-reverse;
-    background-image: linear-gradient(
+    /* background-image: linear-gradient(
       to left,
       var(--color-top) 50%,
       var(--color-middle),
       var(--color-bottom)
-    );
+    ); */
   }
   .work__project-3 {
     flex-direction: row;
     text-align: right;
-    background-image: linear-gradient(
+    /* background-image: linear-gradient(
       to right,
       var(--color-top) 50%,
       var(--color-middle),
       var(--color-bottom)
-    );
+    ); */
   }
   .work__project-4 {
     flex-direction: row-reverse;
-    background-image: linear-gradient(
+    /* background-image: linear-gradient(
       to left,
       var(--color-top) 50%,
       var(--color-middle),
       var(--color-bottom)
-    );
+    ); */
   }
   .work__project-5 {
     flex-direction: row;
     text-align: right;
-    background-image: linear-gradient(
+    /* background-image: linear-gradient(
       to right,
       var(--color-top) 50%,
       var(--color-middle),
       var(--color-bottom)
-    );
+    ); */
   }
 
   .work__img-wrapper::after {
@@ -272,10 +265,6 @@
   .work__project-description {
     font-size: var(--size-base);
   }
-
-  .work__project-btn {
-    font-size: var(--size-base);
-  }
 }
 
 /* xl */
@@ -293,10 +282,6 @@
   }
 
   .work__project-description {
-    font-size: var(--size-lg);
-  }
-
-  .work__project-btn {
     font-size: var(--size-lg);
   }
 }
