--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -5,7 +5,6 @@ footer {
 .footer__content {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, auto);
   grid-template-areas:
     "nav"
     "connect"
@@ -20,7 +19,6 @@ footer {
   justify-content: center;
   column-gap: 1em;
   list-style: none;
-  /* margin: 1rem 0 0 0; */
   padding: 0;
   grid-area: nav;
 }
@@ -45,12 +43,8 @@ footer {
   grid-area: connect;
 }
 
-.footer__connect-title {
-  display: none;
-}
-
 .footer__connect-img {
-  width: var(--size-2xl);
+  height: var(--size-2xl);
   object-fit: contain;
 }
 
@@ -85,16 +79,9 @@ footer {
   }
 
   .footer__connect {
-    /* flex-direction: column; */
     justify-content: flex-end;
     row-gap: 0.5em;
   }
-
-  /* .footer__connect-title {
-    display: inline-block;
-    font-family: var(--font-family-heading);
-    color: var(--color-heading);
-  } */
 
   .footer__note {
     text-align: start;
